--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ inputs:
     required: false
 runs:
   using: 'docker'
-  image: zcloudws/zcloud-cli:v1.0.3
+  image: docker://zcloudws/zcloud-cli:v1.0.3
   env:
     ZCLOUD_USER_TOKEN: ${{ inputs.user-token }}
     ZCLOUD_ENV_NAME: ${{ inputs.env }}
