Create GH Action to deploy content on www.zcloud.ws

--- a/action.yml
+++ b/action.yml
@@ -24,5 +24,7 @@ runs:
     ZCLOUD_USER_TOKEN: ${{ inputs.user-token }}
     ZCLOUD_ENV_NAME: ${{ inputs.env }}
     ZCLOUD_SRC_DIR: ${{ inputs.dir }}
+  entrypoint: zcloud
   args:
+    - deploy
     - ${{ inputs.extra-args }}
